# projeto-diario-oficial

./: DEVELOPMENT_GUIDE.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env  .env.example  .flake8  Dockerfile  pyproject.toml
backend/core/: settings.py  urls.py
backend/diario_oficial/: apps.py  converters.py  models.py  serializers.py  urls.py  views.py
backend/diario_oficial/migrations/: 0001_initial.py  0002_rename_categoria_materia_setor.py  0003_edicao_tipo.py  0004_alter_edicao_numero.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Login.tsx  index.css
frontend/src/pages/: EdicaoDetalhePage.tsx  EdicoesPage.tsx
frontend/src/services/: api.ts
